domino-jnx-commons/src/main/java/com/hcl/domino/commons/dql/parser/DQLParser.java
// Generated from DQL.g4 by ANTLR 4.10.1

package com.hcl.domino.commons.dql.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, CONTAINSALL_VALUELIST=2, CONTAINS_VALUELIST=3, INALL_VALUELIST=4, 
		IN_VALUELIST=5, FORMULA=6, DATETIMEVAL=7, VIEWANDCOLUMNNAMEVAL=8, NUMBERVAL=9, 
		ATFUNCTIONVAL=10, SUBSTITUTIONVAR=11, NL=12, BROPEN=13, BRCLOSE=14, LESS=15, 
		GREATER=16, LESSEQUAL=17, GREATEREQUAL=18, EQUAL=19, ANDNOT=20, ORNOT=21, 
		AND=22, OR=23, ESCAPEDSTRINGVAL=24, FIELDNAME=25;
	public static final int
		RULE_start = 0, RULE_term = 1, RULE_identifier = 2, RULE_operator_with_value = 3, 
		RULE_operator_inall_list = 4, RULE_operator_in_list = 5, RULE_contains_all_list = 6, 
		RULE_contains_list = 7, RULE_value = 8, RULE_boolean = 9, RULE_escapedstring = 10, 
		RULE_datetime = 11, RULE_number = 12, RULE_fieldname = 13, RULE_viewandcolumnname = 14, 
		RULE_atfunction = 15, RULE_substitutionvar = 16, RULE_formulaexpression = 17, 
		RULE_docftterm = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "term", "identifier", "operator_with_value", "operator_inall_list", 
			"operator_in_list", "contains_all_list", "contains_list", "value", "boolean", 
			"escapedstring", "datetime", "number", "fieldname", "viewandcolumnname", 
			"atfunction", "substitutionvar", "formulaexpression", "docftterm"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'\\n'", "'('", "')'", "'<'", "'>'", "'<='", "'>='", "'='", null, null, 
			"'and'", "'or'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "CONTAINSALL_VALUELIST", "CONTAINS_VALUELIST", "INALL_VALUELIST", 
			"IN_VALUELIST", "FORMULA", "DATETIMEVAL", "VIEWANDCOLUMNNAMEVAL", "NUMBERVAL", 
			"ATFUNCTIONVAL", "SUBSTITUTIONVAR", "NL", "BROPEN", "BRCLOSE", "LESS", 
			"GREATER", "LESSEQUAL", "GREATEREQUAL", "EQUAL", "ANDNOT", "ORNOT", "AND", 
			"OR", "ESCAPEDSTRINGVAL", "FIELDNAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DQLParser.EOF, 0); }
		public List<TerminalNode> NL() { return getTokens(DQLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DQLParser.NL, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			term(0);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(39);
				match(NL);
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public DocfttermContext docftterm() {
			return getRuleContext(DocfttermContext.class,0);
		}
		public TerminalNode BROPEN() { return getToken(DQLParser.BROPEN, 0); }
		public TerminalNode BRCLOSE() { return getToken(DQLParser.BRCLOSE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Operator_with_valueContext operator_with_value() {
			return getRuleContext(Operator_with_valueContext.class,0);
		}
		public FormulaexpressionContext formulaexpression() {
			return getRuleContext(FormulaexpressionContext.class,0);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<BooleanContext> boolean_() {
			return getRuleContexts(BooleanContext.class);
		}
		public BooleanContext boolean_(int i) {
			return getRuleContext(BooleanContext.class,i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		return term(0);
	}

	private TermContext term(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TermContext _localctx = new TermContext(_ctx, _parentState);
		TermContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_term, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(48);
				docftterm();
				}
				break;
			case 2:
				{
				setState(49);
				match(BROPEN);
				setState(50);
				docftterm();
				setState(51);
				match(BRCLOSE);
				}
				break;
			case 3:
				{
				setState(53);
				identifier();
				setState(54);
				operator_with_value();
				}
				break;
			case 4:
				{
				setState(56);
				match(BROPEN);
				setState(57);
				identifier();
				setState(58);
				operator_with_value();
				setState(59);
				match(BRCLOSE);
				}
				break;
			case 5:
				{
				setState(61);
				formulaexpression();
				}
				break;
			case 6:
				{
				setState(62);
				match(BROPEN);
				setState(63);
				formulaexpression();
				setState(64);
				match(BRCLOSE);
				}
				break;
			case 7:
				{
				setState(66);
				match(BROPEN);
				setState(67);
				term(0);
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(68);
					boolean_();
					setState(69);
					term(0);
					}
					}
					setState(73); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANDNOT) | (1L << ORNOT) | (1L << AND) | (1L << OR))) != 0) );
				setState(75);
				match(BRCLOSE);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TermContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_term);
					setState(79);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(83); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(80);
							boolean_();
							setState(81);
							term(0);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(85); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public ViewandcolumnnameContext viewandcolumnname() {
			return getRuleContext(ViewandcolumnnameContext.class,0);
		}
		public AtfunctionContext atfunction() {
			return getRuleContext(AtfunctionContext.class,0);
		}
		public FormulaexpressionContext formulaexpression() {
			return getRuleContext(FormulaexpressionContext.class,0);
		}
		public FieldnameContext fieldname() {
			return getRuleContext(FieldnameContext.class,0);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VIEWANDCOLUMNNAMEVAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				viewandcolumnname();
				}
				break;
			case ATFUNCTIONVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				atfunction();
				}
				break;
			case FORMULA:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				formulaexpression();
				}
				break;
			case FIELDNAME:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				fieldname();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_with_valueContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(DQLParser.EQUAL, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode GREATER() { return getToken(DQLParser.GREATER, 0); }
		public TerminalNode LESS() { return getToken(DQLParser.LESS, 0); }
		public TerminalNode GREATEREQUAL() { return getToken(DQLParser.GREATEREQUAL, 0); }
		public TerminalNode LESSEQUAL() { return getToken(DQLParser.LESSEQUAL, 0); }
		public Operator_inall_listContext operator_inall_list() {
			return getRuleContext(Operator_inall_listContext.class,0);
		}
		public Operator_in_listContext operator_in_list() {
			return getRuleContext(Operator_in_listContext.class,0);
		}
		public Contains_all_listContext contains_all_list() {
			return getRuleContext(Contains_all_listContext.class,0);
		}
		public Contains_listContext contains_list() {
			return getRuleContext(Contains_listContext.class,0);
		}
		public Operator_with_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_with_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterOperator_with_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitOperator_with_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitOperator_with_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operator_with_valueContext operator_with_value() throws RecognitionException {
		Operator_with_valueContext _localctx = new Operator_with_valueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operator_with_value);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(EQUAL);
				setState(99);
				value();
				}
				break;
			case GREATER:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(GREATER);
				setState(101);
				value();
				}
				break;
			case LESS:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(LESS);
				setState(103);
				value();
				}
				break;
			case GREATEREQUAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				match(GREATEREQUAL);
				setState(105);
				value();
				}
				break;
			case LESSEQUAL:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				match(LESSEQUAL);
				setState(107);
				value();
				}
				break;
			case INALL_VALUELIST:
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				operator_inall_list();
				}
				break;
			case IN_VALUELIST:
				enterOuterAlt(_localctx, 7);
				{
				setState(109);
				operator_in_list();
				}
				break;
			case CONTAINSALL_VALUELIST:
				enterOuterAlt(_localctx, 8);
				{
				setState(110);
				contains_all_list();
				}
				break;
			case CONTAINS_VALUELIST:
				enterOuterAlt(_localctx, 9);
				{
				setState(111);
				contains_list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_inall_listContext extends ParserRuleContext {
		public TerminalNode INALL_VALUELIST() { return getToken(DQLParser.INALL_VALUELIST, 0); }
		public Operator_inall_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_inall_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterOperator_inall_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitOperator_inall_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitOperator_inall_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operator_inall_listContext operator_inall_list() throws RecognitionException {
		Operator_inall_listContext _localctx = new Operator_inall_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operator_inall_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(INALL_VALUELIST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_in_listContext extends ParserRuleContext {
		public TerminalNode IN_VALUELIST() { return getToken(DQLParser.IN_VALUELIST, 0); }
		public Operator_in_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_in_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterOperator_in_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitOperator_in_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitOperator_in_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operator_in_listContext operator_in_list() throws RecognitionException {
		Operator_in_listContext _localctx = new Operator_in_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operator_in_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(IN_VALUELIST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Contains_all_listContext extends ParserRuleContext {
		public TerminalNode CONTAINSALL_VALUELIST() { return getToken(DQLParser.CONTAINSALL_VALUELIST, 0); }
		public Contains_all_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contains_all_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterContains_all_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitContains_all_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitContains_all_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Contains_all_listContext contains_all_list() throws RecognitionException {
		Contains_all_listContext _localctx = new Contains_all_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_contains_all_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(CONTAINSALL_VALUELIST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Contains_listContext extends ParserRuleContext {
		public TerminalNode CONTAINS_VALUELIST() { return getToken(DQLParser.CONTAINS_VALUELIST, 0); }
		public Contains_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contains_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterContains_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitContains_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitContains_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Contains_listContext contains_list() throws RecognitionException {
		Contains_listContext _localctx = new Contains_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_contains_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(CONTAINS_VALUELIST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public DatetimeContext datetime() {
			return getRuleContext(DatetimeContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public SubstitutionvarContext substitutionvar() {
			return getRuleContext(SubstitutionvarContext.class,0);
		}
		public EscapedstringContext escapedstring() {
			return getRuleContext(EscapedstringContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_value);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATETIMEVAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				datetime();
				}
				break;
			case NUMBERVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				number();
				}
				break;
			case SUBSTITUTIONVAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				substitutionvar();
				}
				break;
			case ESCAPEDSTRINGVAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				escapedstring();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanContext extends ParserRuleContext {
		public TerminalNode ANDNOT() { return getToken(DQLParser.ANDNOT, 0); }
		public TerminalNode ORNOT() { return getToken(DQLParser.ORNOT, 0); }
		public TerminalNode AND() { return getToken(DQLParser.AND, 0); }
		public TerminalNode OR() { return getToken(DQLParser.OR, 0); }
		public BooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitBoolean(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitBoolean(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanContext boolean_() throws RecognitionException {
		BooleanContext _localctx = new BooleanContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_boolean);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANDNOT) | (1L << ORNOT) | (1L << AND) | (1L << OR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscapedstringContext extends ParserRuleContext {
		public TerminalNode ESCAPEDSTRINGVAL() { return getToken(DQLParser.ESCAPEDSTRINGVAL, 0); }
		public EscapedstringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escapedstring; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterEscapedstring(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitEscapedstring(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitEscapedstring(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscapedstringContext escapedstring() throws RecognitionException {
		EscapedstringContext _localctx = new EscapedstringContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_escapedstring);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(ESCAPEDSTRINGVAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatetimeContext extends ParserRuleContext {
		public TerminalNode DATETIMEVAL() { return getToken(DQLParser.DATETIMEVAL, 0); }
		public DatetimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datetime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).enterDatetime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DQLListener ) ((DQLListener)listener).exitDatetime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DQLVisitor ) return ((DQLVisitor<? extends T>)visitor).visitDatetime(this);
			else return visitor.visitChildren(this);
		}
	}
